--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -59,3 +59,11 @@ span.active {
   padding-top: 20px;
   color: #999;
 }
+
+.select-search {
+  width: 100%;
+}
+
+.description {
+  margin-bottom: 50px;
+}
