--- a/app/views/clients/show.html.erb
+++ b/app/views/clients/show.html.erb
@@ -1,48 +1,75 @@
-<p id="notice"><%= notice %></p>
-<h1><%= @client.name %></h1>
+<div class="page-header">
+  <div class="row">
+    <div class="col-md-6">
+      <h2>
+        <%= @client.name %>
+      </h2>
+    </div>
+    <div class="col-md-6">
+      <h2>
+        <%= link_to 'Edit', edit_client_path(@client), :class => "btn btn-warning pull-right" %>
+      </h2>
+    </div>
+  </div>
+</div>
 
+<% if !@client.sales.empty? %>
 
-<h3>Sales</h3>
-<table>
-  <thead>
-    <th>Seller</th>
-    <th>Margin</th>
-    <th>Revenue</th>
-    <th>Date</th>
-  </thead>
-  <tbody>
-    <% @client.sales.each do |sale| %>
-      <tr>
-        <td><%= empl(sale.user) %></td>
-        <td><%= sale.margin %></td>
-        <td><%= sale.revenue %></td>
-        <td><%= sale.created_at %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+  <h3>Sales</h3>
 
-<h3>Opportunities</h3>
-<table>
-  <thead>
-    <th>Seller</th>
-    <th>Margin</th>
-    <th>Revenue</th>
-    <th>Probability</th>
-    <th>Closing date</th>
-  </thead>
-  <tbody>
-    <% @client.opportunities.each do |opportunity| %>
-      <tr>
-        <td><%= empl(opportunity.user) %></td>
-        <td><%= opportunity.total_margin %></td>
-        <td><%= opportunity.total_revenue %></td>
-        <td><%= opportunity.probability %></td>
-        <td><%= opportunity.closing_date %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+  <div class="table-responsive">
+    <table class="table table-striped table-hover">
+      <thead>
+        <tr>
+          <th>Client</th>
+          <th>Date</th>
+          <th>Margin</th>
+          <th>Revenue</th>
+        </tr>
+      </thead>
+      <tbody>
+        <% @client.sales.each do |sale| %>
+        <tr>
+          <td><%= link_to sale.client.name, client_path(sale.client) %></td>
+          <td><%= link_to sale.created_at.strftime("%b %d, %Y"), sale_path(sale) %></td>
+          <td><%= number_to_currency(sale.margin, unit: "", precision: 0, delimiter: " ") %></td>
+          <td><%= number_to_currency(sale.revenue, unit: "", precision: 0, delimiter: " ") %></td>
+        </tr>
+        <% end %>
+     </tbody>
+    </table>
+  </div>
 
-<%= link_to 'Edit', edit_client_path(@client) %> |
-<%= link_to 'Back', clients_path %>
+<% end %>
+
+<% if !@client.opportunities.empty? %>
+
+  <h3>Pipeline</h3>
+
+  <div class="table-responsive">
+    <table class="table table-striped table-hover">
+      <thead>
+        <tr>
+          <th>Client</th>
+          <th>Closing date</th>
+          <th>Margin</th>
+          <th>Revenue</th>
+          <th>Probability</th>
+        </tr>
+      </thead>
+      <tbody>
+        <% @client.opportunities.each do |opportunity| %>
+        <tr>
+          <td><%= link_to opportunity.client.name, client_path(opportunity.client) %></td>
+          <td><%= link_to opportunity.closing_date.strftime("%b %d, %Y"), opportunity_path(opportunity) %></td>
+          <td><%= number_to_currency(opportunity.total_margin, unit: "", precision: 0, delimiter: " ") %></td>
+          <td><%= number_to_currency(opportunity.total_revenue, unit: "", precision: 0, delimiter: " ") %></td>
+          <td><%= opportunity.probability %>%</td>
+        </tr>
+        <% end %>
+     </tbody>
+    </table>
+  </div>
+
+<% end %>
+
