--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,9 +36,9 @@
       <% if logged_in? %>
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
-          <li class=""><%= link_to "Pipeline", opportunities_path %></li>
-          <li class=""><%= link_to "Sales", sales_path %></li>
-          <li class=""><%= link_to "Offices", offices_path %></li>
+          <li class="<%= currentpath(opportunities_path) %>"><%= link_to "Pipeline", opportunities_path %></li>
+          <li class="<%= currentpath(sales_path) %>"><%= link_to "Sales", sales_path %></li>
+          <li class="<%= currentpath(offices_path) %>"><%= link_to "Offices", offices_path %></li>
         </ul>
         <form class="navbar-form navbar-right" role="search">
           <div class="input-group">
@@ -53,7 +53,7 @@
             <a href="#" class="dropdown-toggle" data-toggle="dropdown"><%= current_user.full_name %> <b class="caret"></b></a>
             <ul class="dropdown-menu">
               <li><a href="#">My numbers</a></li>
-              <li><a href="#">Profile</a></li>
+              <li><%= link_to "Profile", user_path(current_user) %></li>
               <li class="divider"></li>
               <li><%= link_to "Log Out", logout_path, method: :delete %></li>
             </ul>
