--- a/app/views/offices/show.html.erb
+++ b/app/views/offices/show.html.erb
@@ -1,50 +1,49 @@
-<p id="notice"><%= notice %></p>
+<div class="page-header">
+  <div class="row">
+    <div class="col-md-12">
+      <h2><%= @office.name %></h2>
+    </div>
+  </div>
+</div>
 
-<h1><%= @office.name %></h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Seller</th>
-      <th>Budget</th>
-      <th>Current margin</th>
-      <th>Current revenue</th>
-      <th>Margin in pipeline</th>
-      <th>Revenue in pipeline</th>
-      <th>Estimated margin</th>
-      <th>Estimated revenue</th>
-      <th colspan="3">Actions</th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @office.users.each do |user| %>
+<div class="table-responsive">
+  <table class="table table-striped table-hover">
+    <thead>
       <tr>
-        <td><%= empl(user) %></td>
-        <td><%= seller_current_budget(user) %></td>
-        <td><%= user.sales.this_month.sum(:margin) %></td>
-        <td><%= user.sales.this_month.sum(:revenue) %></td>
-        <td><%= user.opportunities.this_month.sum(:total_margin) %></td>
-        <td><%= user.opportunities.this_month.sum(:total_revenue) %></td>
-        <td><%= user.opportunities.this_month.sum(:total_margin) + user.sales.this_month.sum(:margin) %></td>
-        <td><%= user.opportunities.this_month.sum(:total_revenue) + user.sales.this_month.sum(:revenue) %></td>
-        <td><%= link_to 'Show', user %></td>
-        <td><%= link_to 'Edit', edit_user_path(user) %></td>
-        <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <th>Seller</th>
+        <th>Budget</th>
+        <th>Current margin</th>
+        <th>Current revenue</th>
+        <th>Margin in pipeline</th>
+        <th>Revenue in pipeline</th>
+        <th>Estimated margin</th>
+        <th>Estimated revenue</th>
       </tr>
-    <% end %>
-    <tr>
-      <td><strong>Total</strong></td>
-      <td><strong><%= office_current_budget(@office) %></strong></td>
-      <td><strong><%= office_margin(@office) %></strong></td>
-      <td><strong><%= office_revenue(@office) %></strong></td>
-      <td><strong><%= office_pipeline_margin(@office) %></strong></td>
-      <td><strong><%= office_pipeline_revenue(@office) %></strong></td>
-      <td><strong><%= office_pipeline_margin(@office) + office_margin(@office) %></strong></td>
-      <td><strong><%= office_pipeline_revenue(@office) + office_revenue(@office) %></strong></td>
-    </tr>
-  </tbody>
-</table>
+    </thead>
 
-<%= link_to 'Edit', edit_office_path(@office) %> |
-<%= link_to 'Back', offices_path %>
+    <tbody>
+      <% @office.users.each do |user| %>
+        <tr>
+          <td><%= empl(user) %></td>
+          <td><%= number_to_currency(seller_current_budget(user), unit: "", precision: 0, delimiter: " ") %></td>
+          <td><%= number_to_currency(user.sales.this_month.sum(:margin), unit: "", precision: 0, delimiter: " ") %></td>
+          <td><%= number_to_currency(user.sales.this_month.sum(:revenue), unit: "", precision: 0, delimiter: " ") %></td>
+          <td><%= number_to_currency(user.opportunities.this_month.sum(:total_margin), unit: "", precision: 0, delimiter: " ") %></td>
+          <td><%= number_to_currency(user.opportunities.this_month.sum(:total_revenue), unit: "", precision: 0, delimiter: " ") %></td>
+          <td><%= number_to_currency(user.opportunities.this_month.sum(:total_margin) + user.sales.this_month.sum(:margin), unit: "", precision: 0, delimiter: " ") %></td>
+          <td><%= number_to_currency(user.opportunities.this_month.sum(:total_revenue) + user.sales.this_month.sum(:revenue), unit: "", precision: 0, delimiter: " ") %></td>
+        </tr>
+      <% end %>
+      <tr>
+        <td><strong>Total</strong></td>
+        <td><strong><%= number_to_currency(office_current_budget(@office), unit: "", precision: 0, delimiter: " ") %></strong></td>
+        <td><strong><%= number_to_currency(office_margin(@office), unit: "", precision: 0, delimiter: " ") %></strong></td>
+        <td><strong><%= number_to_currency(office_revenue(@office), unit: "", precision: 0, delimiter: " ") %></strong></td>
+        <td><strong><%= number_to_currency(office_pipeline_margin(@office), unit: "", precision: 0, delimiter: " ") %></strong></td>
+        <td><strong><%= number_to_currency(office_pipeline_revenue(@office), unit: "", precision: 0, delimiter: " ") %></strong></td>
+        <td><strong><%= number_to_currency(office_pipeline_margin(@office) + office_margin(@office), unit: "", precision: 0, delimiter: " ") %></strong></td>
+        <td><strong><%= number_to_currency(office_pipeline_revenue(@office) + office_revenue(@office), unit: "", precision: 0, delimiter: " ") %></strong></td>
+      </tr>
+    </tbody>
+  </table>
+</div>
