--- a/app/views/opportunities/new.html.erb
+++ b/app/views/opportunities/new.html.erb
@@ -1,5 +1,12 @@
-<h1>New opportunity</h1>
+<div class="row">
+  <div class="col-md-6">
+    <div class="page-header">
+      <h2>New opportunity</h2>
+    </div>
+    <%= render 'form' %>
+  </div>
+</div>
 
-<%= render 'form' %>
 
-<%= link_to 'Back', opportunities_path %>
+
+
