--- a/app/views/sales/_form.html.erb
+++ b/app/views/sales/_form.html.erb
@@ -17,14 +17,14 @@
   <div class="form-group">
     <%= f.label :client_id, "Client", :class => "col-md-3 control-label" %>
     <div class="col-md-9">
-      <%= f.input_field :client_id, collection: Client.all, label_method: :name, :class => "form-control select-search" %>
+      <%= f.input_field :client_id, collection: Client.all, label_method: :name, :class => "select-search" %>
     </div>
   </div>
 
   <div class="form-group">
     <%= f.label :user_id, "User", :class => "col-md-3 control-label" %>
     <div class="col-md-9">
-      <%= f.input_field :user_id, collection: User.all, label_method: :full_name, :class => "form-control select-search" %>
+      <%= f.input_field :user_id, collection: User.all, label_method: :full_name, :class => "select-search" %>
     </div>
   </div>
 
