--- a/app/views/sales/index.html.erb
+++ b/app/views/sales/index.html.erb
@@ -4,9 +4,11 @@
       <h2><%= t('sales.title') %></h2>
     </div>
     <div class="col-md-6">
-      <button class="btn btn-primary pull-right" data-toggle="modal" data-target="#newSale">
-        New sale
-      </button>
+      <h2>
+        <button class="btn btn-primary pull-right" data-toggle="modal" data-target="#newSale">
+          New sale
+        </button>
+      </h2>
     </div>
   </div>
 </div>
@@ -19,7 +21,9 @@
         <th><%= t('sales.date') %></th>
         <th><%= t('sales.margin') %></th>
         <th><%= t('sales.revenue') %></th>
+        <th><%= t('sales.commission') %></th>
         <th><%= t('sales.state') %></th>
+        <th><%= t('sales.payment_date') %></th>
       </tr>
     </thead>
 
@@ -30,6 +34,8 @@
           <td><%= link_to sale.created_at.strftime("%b %d, %Y"), sale_path(sale) %></td>
           <td><strong><%= number_to_currency(sale.margin, unit: "", precision: 0, delimiter: " ") %></strong></td>
           <td><strong><%= number_to_currency(sale.revenue, unit: "", precision: 0, delimiter: " ") %></strong></td>
+          <td></td>
+          <td></td>
           <td></td>
         </tr>
       <% end %>
@@ -68,7 +74,7 @@
           <div class="form-group">
             <%= f.label :client_id, "Client", :class => "col-md-3 control-label" %>
             <div class="col-md-9">
-              <%= f.input_field :client_id, collection: Client.all, label_method: :name, :class => "form-control select-search" %>
+              <%= f.input_field :client_id, collection: Client.all, label_method: :name, :class => "select-search" %>
             </div>
           </div>
 
