--- a/app/views/sales/show.html.erb
+++ b/app/views/sales/show.html.erb
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
     <div class="page-header">
-      <h2><%= link_to @sale.client.name, client_path(@sale.client) %> <small class="pull-right"><%= @sale.created_at.strftime("%b %d, %Y") %> ago</small></h2>
+      <h2><%= link_to @sale.client.name, client_path(@sale.client) %> <small class="pull-right"><%= @sale.created_at.strftime("%b %d, %Y") %></small></h2>
     </div>
     <p class="lead">This order was sold by <%= empl(@sale.user) %> <%= time_ago_in_words(@sale.created_at) %> ago.</p>
     <table class="table table-striped table-hover">
@@ -64,6 +64,12 @@
         <% end %>
       </tbody>
     </table>
+    <% if !@sale.description.blank? %>
+    <div class="description">
+      <h3>Description</h3>
+      <p><%= @sale.description %></p>
+    </div>
+    <% end %>
     <div class="col-md-6">
       <% if @sale.user == current_user %>
         <div class="btn-group">
@@ -110,14 +116,14 @@
           <div class="form-group">
             <%= f.label :client_id, "Client", :class => "col-md-3 control-label" %>
             <div class="col-md-9">
-              <%= f.input_field :client_id, collection: Client.all, label_method: :name, :class => "form-control select-search" %>
+              <%= f.input_field :client_id, collection: Client.all, label_method: :name, :class => "select-search" %>
             </div>
           </div>
 
           <div class="form-group">
             <%= f.label :user_id, "User", :class => "col-md-3 control-label" %>
             <div class="col-md-9">
-              <%= f.input_field :user_id, collection: User.all, label_method: :full_name, :class => "form-control select-search" %>
+              <%= f.input_field :user_id, collection: User.all, label_method: :full_name, :class => "select-search" %>
             </div>
           </div>
 
