--- a/app/views/sales/_form.html.erb
+++ b/app/views/sales/_form.html.erb
@@ -15,68 +15,115 @@
   <% end %>
 
   <div class="form-group">
-    <%= f.label :client_id, "Client", :class => "col-md-3 control-label" %>
-    <div class="col-md-9">
+    <%= f.label :client_id, "Client", :class => "col-xs-3 col-md-3 control-label" %>
+    <div class="col-xs-9 col-md-9">
       <%= f.input_field :client_id, collection: Client.all, label_method: :name, :class => "select-search" %>
     </div>
   </div>
 
   <div class="form-group">
-    <%= f.label :user_id, "User", :class => "col-md-3 control-label" %>
-    <div class="col-md-9">
+    <%= f.label :user_id, "User", :class => "col-xs-3 col-md-3 control-label" %>
+    <div class="col-xs-9 col-md-9">
       <%= f.input_field :user_id, collection: User.all, label_method: :full_name, :class => "select-search" %>
     </div>
   </div>
 
   <div class="form-group">
-    <%= f.label :software, :class => "col-md-3 control-label" %>
-    <div class="col-md-9">
-      <%= f.input_field :software, :class => "form-control" %>
+    <%= f.label :software, :class => "col-xs-3 col-md-3 control-label" %>
+    <div class="col-xs-5 col-md-5 col-lg-6">
+      <div class="input-group">
+        <%= f.input_field :software, :class => "form-control", :placeholder => "Sum" %>
+        <span class="input-group-addon">NOK</span>
+      </div>
+    </div>
+    <div class="col-xs-4 col-md-4 col-lg-3">
+      <div class="input-group">
+        <%= f.input_field :software_rate, :class => "form-control", :placeholder => "80" %>
+        <span class="input-group-addon">%</span>
+      </div>
+    </div>
+  </div>
+
+
+  <div class="form-group">
+    <%= f.label :semi, :class => "col-xs-3 col-md-3 control-label" %>
+    <div class="col-xs-5 col-md-5 col-lg-6">
+      <div class="input-group">
+        <%= f.input_field :semi, :class => "form-control", :placeholder => "Sum" %>
+        <span class="input-group-addon">NOK</span>
+      </div>
+    </div>
+    <div class="col-xs-4 col-md-4 col-lg-3">
+      <div class="input-group">
+        <%= f.input_field :semi_rate, :class => "form-control", :placeholder => "70" %>
+        <span class="input-group-addon">%</span>
+      </div>
     </div>
   </div>
 
   <div class="form-group">
-    <%= f.label :semi, :class => "col-md-3 control-label" %>
-    <div class="col-md-9">
-      <%= f.input_field :semi, :class => "form-control" %>
+    <%= f.label :production, :class => "col-xs-3 col-md-3 control-label" %>
+    <div class="col-xs-5 col-md-5 col-lg-6">
+      <div class="input-group">
+        <%= f.input_field :production, :class => "form-control", :placeholder => "Sum" %>
+        <span class="input-group-addon">NOK</span>
+      </div>
+    </div>
+    <div class="col-xs-4 col-md-4 col-lg-3">
+      <div class="input-group">
+        <%= f.input_field :production_rate, :class => "form-control", :placeholder => "50" %>
+        <span class="input-group-addon">%</span>
+      </div>
     </div>
   </div>
 
   <div class="form-group">
-    <%= f.label :production, :class => "col-md-3 control-label" %>
-    <div class="col-md-9">
-      <%= f.input_field :production, :class => "form-control" %>
+    <%= f.label :ads, :class => "col-xs-3 col-md-3 control-label" %>
+    <div class="col-xs-5 col-md-5 col-lg-6">
+      <div class="input-group">
+        <%= f.input_field :ads, :class => "form-control", :placeholder => "Sum" %>
+        <span class="input-group-addon">NOK</span>
+      </div>
+    </div>
+    <div class="col-xs-4 col-md-4 col-lg-3">
+      <div class="input-group">
+        <%= f.input_field :ads_rate, :class => "form-control", :placeholder => "15" %>
+        <span class="input-group-addon">%</span>
+      </div>
     </div>
   </div>
 
   <div class="form-group">
-    <%= f.label :ads, :class => "col-md-3 control-label" %>
-    <div class="col-md-9">
-      <%= f.input_field :ads, :class => "form-control" %>
+    <%= f.label :other, :class => "col-xs-3 col-md-3 control-label" %>
+    <div class="col-xs-5 col-md-5 col-lg-6">
+      <div class="input-group">
+        <%= f.input_field :other, :class => "form-control", :placeholder => "Sum" %>
+        <span class="input-group-addon">NOK</span>
+      </div>
+    </div>
+    <div class="col-xs-4 col-md-4 col-lg-3">
+      <div class="input-group">
+        <%= f.input_field :other_rate, :class => "form-control", :placeholder => "0" %>
+        <span class="input-group-addon">%</span>
+      </div>
     </div>
   </div>
 
   <div class="form-group">
-    <%= f.label :other, :class => "col-md-3 control-label" %>
-    <div class="col-md-9">
-      <%= f.input_field :other, :class => "form-control" %>
-    </div>
-  </div>
-
-  <div class="form-group">
-    <%= f.label :description, :class => "col-md-3 control-label" %>
-    <div class="col-md-9">
+    <%= f.label :description, :class => "col-xs-3 col-md-3 control-label" %>
+    <div class="col-xs-9 col-md-9">
       <%= f.input_field :description, :class => "form-control" %>
     </div>
   </div>
 
   <div class="form-group">
-    <%= f.label :file, "Attachment", :class => "col-md-3 control-label" %>
-    <div class="col-md-9">
+    <%= f.label :file, "Attachment", :class => "col-xs-3 col-md-3 control-label" %>
+    <div class="col-xs-9 col-md-9">
       <%= f.file_field :file, :class => "form-control" %>
     </div>
   </div>
-  <div class="col-sm-offset-3 col-md-9">
+  
+  <div class="col-xs-offset-3 col-xs-9 col-md-offset-3 col-md-9">
     <%= f.submit "Submit", :class => "btn btn-primary" %>
   </div>
 <% end %>
