--- a/app/views/notifier/password_reset.html.erb
+++ b/app/views/notifier/password_reset.html.erb
@@ -1,13 +1,41 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta charset='utf-8'>
 </head>
-  <body>
-    <p>Hello, <%= @user.first_name %>!</p>
-    <br />
-    <p>It looks like you have forgotten your password? <br />
-      Dont worry, just <%= link_to "click here", edit_password_reset_url(@user.password_reset_token) %> to reset your password:</p>
-    <div class="footer">
-    </div>
+  <body style="font-family: 'helvetica neue'; font-size: 14px;">
+    <table bgcolor="#FFF" cellspacing="0" cellpadding="0" style="margin: auto;">
+      <tr style="color: #FFF;">
+        <td bgcolor="#01254C" style="padding: 0 100px 0 20px;">
+          <p style="font-size: 20px;">Solid Media Group</p>
+        </td>
+        <td bgcolor="#01254C" style="padding: 0 10px;">
+          <%= link_to "Sales", sales_url, :style => "text-decoration: none; color: #FFF;" %>
+        </td>
+        <td bgcolor="#01254C" style="padding: 0 10px;">
+          <%= link_to "Pipeline", opportunities_url, :style => "text-decoration: none; color: #FFF;" %>
+        </td>
+        <td bgcolor="#01254C" style="padding: 0 20px 0 10px;">
+          <%= link_to @user.full_name, user_url(@user), :style => "text-decoration: none; color: #FFF;" %>
+        </td>
+      </tr>
+      <tr>
+        <td style="padding: 0 50px;" colspan="4"><h3>Hello, <%= @user.first_name %>!</h3></td>
+      </tr>
+      <tr>
+        <td style="padding: 0 50px 20px;" colspan="4">
+          <p>
+            It sounds like you have forgotten your login details? <br />
+            Dont worry, just <%= link_to "click here", edit_password_reset_url(@user.password_reset_token), :style => "text-decoration: none; color: #428bca;" %> to reset your password.
+          </p>
+          <p>Did you not request password reset instructions? Please contact your admin to investigate in this!</p>
+        </td>
+      </tr>
+      <tr>
+        <td bgcolor="#F4F4F4" style="padding: 0 50px;" colspan="4">
+          <p>Solid Media Group 2014</p>
+        </td>
+      </tr>
+    </table>
   </body>
 </html>
