--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -49,6 +49,7 @@
           </div><!-- /input-group -->
         </form>
         <ul class="nav navbar-nav navbar-right">
+          <li class="<%= currentpath(admin_index_path) %>"><%= link_to "Admin", admin_index_path %></li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown"><%= current_user.full_name %> <b class="caret"></b></a>
             <ul class="dropdown-menu">
