Modified admin view and controllers

--- a/app/views/admin/_menu.html.erb
+++ b/app/views/admin/_menu.html.erb
@@ -1,6 +1,6 @@
 <div class="page-header border-none">
-  <ul class="nav nav-pills nav-justified">
-    <li class="<%= currentpath(admin_users_path) %><%= currentpath(admin_index_path) %>"><%= link_to "Users", admin_users_path %></li>
+  <ul class="nav nav-tabs nav-justified">
+    <li class="<%= currentpath(admin_users_path) %>"><%= link_to "Users", admin_users_path %></li>
     <li class="<%= currentpath(admin_budgets_path) %>"><%= link_to "Budgets", admin_budgets_path %></li>
     <li class="<%= currentpath(admin_offices_path) %>"><%= link_to "Offices", admin_offices_path %></li>
     <li class="<%= currentpath(admin_sales_path) %>"><%= link_to "Sales", admin_sales_path %></li>
