--- a/app/views/admin/budgets.html.erb
+++ b/app/views/admin/budgets.html.erb
@@ -33,7 +33,7 @@
         ]), :class => 'form-control' %>
     </div>
     <div class="col-md-1">
-      <%= submit_tag "Choose", :class => "btn btn-default" %>
+      <%= submit_tag "Filter", :name => nil, :class => "btn btn-default" %>
     </div>
   </div>
 <% end %>
