--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -1,7 +1,3 @@
-<%= render 'menu' %>
+<h2>Select category:</h2>
 
-<ul>
-<% @users.each do |user| %>
-  <li><%= user.full_name %></li>
-<% end %>
-</ul>
+<%= render 'menu' %>
