--- a/app/views/budgets/_form.html.erb
+++ b/app/views/budgets/_form.html.erb
@@ -33,6 +33,7 @@
   <div class="form-inputs">
     <%= f.input :amount %>
   </div>
+  <%= f.input :year %>
 
   <div class="actions">
     <%= f.submit %>
