--- a/app/views/opportunities/index.html.erb
+++ b/app/views/opportunities/index.html.erb
@@ -159,7 +159,7 @@
   <div class="form-group">
     <%= f.label :closing_date, "Closing", :class => "col-xs-3 col-md-3 control-label" %>
     <div class="col-xs-5 col-md-5 col-lg-6">
-      <%= f.date_field :closing_date, :class => "form-control" %>
+      <%= f.date_field :closing_date, :class => "form-control", :placeholder => "dd.mm.yyyy" %>
     </div>
     <div class="col-xs-4 col-md-4 col-lg-3">
       <div class="input-group">
