Fixed minor bugs and improved some views

--- a/app/views/admin/budgets.html.erb
+++ b/app/views/admin/budgets.html.erb
@@ -2,41 +2,22 @@
 
   <%= form_tag(admin_budgets_path, :method => "get", id: "search-form") do %>
   <div class="row">
-    <div class="col-md-offset-6 col-md-2">
-      <%= select_tag :office, options_for_select([
-        "All",
-        "Oslo", 
-        "Stockholm",
-        "Jönköping"
-        ]), :class => 'form-control' %>
+    <div class="col-md-2">
+      <% offices_array = @offices.map { |office| [office.name] } %>
+      <%= select_tag :office, options_for_select(offices_array), :class => 'form-control' %>
     </div>
     <div class="col-md-2">
-      <%= select_tag :search, options_for_select([ 
-        "January",
-        "February",
-        "March",
-        "April",
-        "May",
-        "June",
-        "July",
-        "August",
-        "September",
-        "October",
-        "November",
-        "December"
-        ], (params[:search] or Time.now.strftime("%B"))), :class => 'form-control' %>
+      <%= select_tag :month, options_for_select(["January", "February", "March", "April", "May", "June", "July", "August", "September", "October", "November", "December" ], (params[:month] or Time.now.strftime("%B"))), :class => 'form-control' %>
     </div>
     <div class="col-md-1">
-      <%= select_tag :year, options_for_select([ 
-        "2014",
-        "2015"
-        ]), :class => 'form-control' %>
+      <%= select_tag :year, options_for_select([Time.now.strftime("%Y"), (Time.now + 34164000).strftime("%Y")]), :class => 'form-control' %>
     </div>
     <div class="col-md-1">
-      <%= submit_tag "Filter", :name => nil, :class => "btn btn-default" %>
+      <%= submit_tag "Filter", :class => "btn btn-default" %>
     </div>
   </div>
 <% end %>
+<% if params[:commit] %>
 
 <div class="row">
   <div class="col-md-8">
@@ -59,7 +40,7 @@
           <tr>
             <td><%= empl(user) %></td>
             <td><%= user.office.name %></td>
-            <% if seller_budget(user, params[:search]) == 0 %>
+            <% if seller_budget(user, params[:month]) == 0 %>
             <td>
               <%= simple_form_for(@budget) do |f| %>
                 <% if @budget.errors.any? %>
@@ -74,11 +55,7 @@
                   </div>
                 <% end %>
                   <%= f.hidden_field :user_id, :value => user.id %>
-                  <% if params[:search] %>
-                    <%= f.hidden_field :month, :value => params[:search] %>
-                  <% else %>
-                    <%= f.hidden_field :month, :value => Time.now.strftime("%B") %>
-                  <% end %>
+                  <%= f.hidden_field :month, :value => params[:month] %>
                   <%= f.input_field :amount, :class => "form-control input-sm" %>
                 </td>
                 <td>
@@ -87,8 +64,13 @@
               <% end %>
             </td>
             <% else %>
-            <td><%= currency(seller_budget(user, params[:search])) %></td>
-            <td><%= link_to "Edit", edit_budget_path(seller_budget_id(user, params[:search])) %></td>
+            <td><%= currency(seller_budget(user, params[:month])) %></td>
+            <td>
+              <div class="btn-group btn-group-xs">
+                <%= link_to "Edit", edit_budget_path(seller_budget_id(user, params[:month])), :class => "btn btn-warning btn-xs" %>
+                  <a href="#" class="btn btn-danger btn-xs">Delete</a>
+                </div>
+              </td>
             <% end %>
           </tr>
           <% end %>
@@ -113,7 +95,7 @@
           <% @offices.each do |office| %>
           <tr>
             <td><%= link_to office.name, office_path(office) %></td>
-            <td><%= currency(office_month_budget(office, params[:search])) %></td>
+            <td><%= currency(office_month_budget(office, params[:month])) %></td>
           </tr>
           <% end %>
         </tbody>
@@ -121,3 +103,5 @@
     </div>
   </div>
 </div>
+
+<% end %>
