Added state to sales

--- a/app/views/admin/_menu.html.erb
+++ b/app/views/admin/_menu.html.erb
@@ -4,6 +4,6 @@
     <li class="<%= currentpath(admin_budgets_path) %>"><%= link_to "Budgets", admin_budgets_path %></li>
     <li class="<%= currentpath(admin_offices_path) %>"><%= link_to "Offices", admin_offices_path %></li>
     <li class="<%= currentpath(admin_sales_path) %>"><%= link_to "Sales", admin_sales_path %></li>
-    <li class="<%= currentpath(admin_pipelines_path) %>"><%= link_to "pipelines", admin_pipelines_path %></li>
+    <li class="<%= currentpath(admin_pipelines_path) %>"><%= link_to "Pipelines", admin_pipelines_path %></li>
   </ul>
 </div>
