--- a/app/views/admin/budgets.html.erb
+++ b/app/views/admin/budgets.html.erb
@@ -1,26 +1,30 @@
 <%= render 'menu' %>
-
-  <%= form_tag(admin_budgets_path, :method => "get", id: "search-form") do %>
+<div class="page-header">
   <div class="row">
-    <div class="col-md-2">
-      <%= select_tag :month, options_for_select(["January", "February", "March", "April", "May", "June", "July", "August", "September", "October", "November", "December" ], (params[:month] or Time.now.strftime("%B"))), :class => 'form-control' %>
+    <div class="col-md-8">
+      <% if params[:commit] %>
+      <h3>Showing budgets for <%= params[:month] + " " + params[:year] %></h3>
+      <% else %>
+      <h3>Filter to show budgets:</h3>
+      <% end %>
     </div>
-    <div class="col-md-1">
-      <%= select_tag :year, options_for_select([Time.now.strftime("%Y"), (Time.now + 34164000).strftime("%Y")], (params[:year] or Time.now.strftime("%Y"))), :class => 'form-control' %>
-    </div>
-    <div class="col-md-1">
-      <%= submit_tag "Filter", :class => "btn btn-default" %>
-    </div>
+    <%= form_tag(admin_budgets_path, :method => "get", id: "search-form") do %>
+      <div class="col-md-2">
+        <%= select_tag :month, options_for_select(["January", "February", "March", "April", "May", "June", "July", "August", "September", "October", "November", "December" ], (params[:month] or Time.now.strftime("%B"))), :class => 'form-control' %>
+      </div>
+      <div class="col-md-1">
+        <%= select_tag :year, options_for_select([Time.now.strftime("%Y"), (Time.now + 34164000).strftime("%Y")], (params[:year] or Time.now.strftime("%Y"))), :class => 'form-control' %>
+      </div>
+      <div class="col-md-1">
+        <%= submit_tag "Filter", :class => "btn btn-default" %>
+      </div>
+    <% end %>
   </div>
-<% end %>
+</div>
 <% if params[:commit] %>
 
 <div class="row">
   <div class="col-md-8">
-    <div class="page-header border-none">
-      <h3>Budgets by seller</h3>
-    </div>
-
     <div class="table-responsive">
       <table class="table table-striped table-hover">
         <thead>
@@ -74,9 +78,6 @@
   </div>
 
   <div class="col-md-4">
-    <div class="page-header border-none">
-      <h3>Budgets by office</h3>
-    </div>
     <div class="table-responsive">
       <table class="table table-striped table-hover">
         <thead>
